--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,18 @@
+# Use the latest 2.1 version of CircleCI pipeline process engine. See: https://circleci.com/docs/2.0/configuration-reference
 version: 2.1
+# Use a package of configuration called an orb.
 orbs:
-  node: circleci/node@3.0.0
+  # Declare a dependency on the welcome-orb
+  accelq-connect: accelq/accelq-connect@1.0.0
+# Orchestrate or schedule a set of jobs
 workflows:
-  node-tests:
+  use-my-orb:
     jobs:
-      - node/test
+      - accelq-connect/accelq-ci:
+          agent-name: 'POC'
+          job-id: '345482'
+          password: 'Q2hhbmdlTWUx'
+          project-name: 'Amar Qbank'
+          tenant: 'demo'
+          url: 'https://poc.accelq.io'
+          user: 'tenantAdmin@demo.com'
